Support arg to pokypkginfo
Signed-off-by: Nobuhiro Iwamatsu <iwamatsu@nigauri.org>

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="jp">
 <head>
   <meta charset="UTF-8">
-  <title>Poky(rocko)/debian(buster) version comparison</title>
+  <title>Poky({{codename}})/debian(buster) version comparison</title>
 </head>
 <body>
-  <h1>Poky(rocko)/debian(buster) version comparison</h1>
+  <h1>Poky({{codename}})/debian(buster) version comparison</h1>
 
   <table border="1">
   <tr>
