--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Poky({{codename}})/debian(buster) version comparison</h1>
 
-  <table border="1">
+  <table border="1" align="center">
   <tr>
   <th bgcolor="#b0c4de">Poky recipe name</th>
   <th bgcolor="#b0c4de">Poky's verion</th>
